# mafia

./: .gitignore  CMakeLists.txt  main.cpp  user_chat.txt
game_classes/: message.h  player_base.cpp  player_base.h  roles_enum.h
game_classes/players/: player_base.cpp  player_base.h  player_civilian.cpp  player_civilian.h  player_doctor.cpp  player_doctor.h  player_leader.cpp  player_leader.h  player_mafia.cpp  player_mafia.h  player_maniac.cpp  player_maniac.h  player_playable.cpp  player_playable.h  player_sheriff.cpp  player_sheriff.h
game_classes/user/: user_base.cpp  user_base.h  user_civilian.cpp  user_civilian.h  user_doctor.cpp  user_doctor.h  user_mafia.cpp  user_mafia.h  user_maniac.cpp  user_maniac.h  user_sheriff.cpp  user_sheriff.h
